tests/ui/rfcs/rfc-2457-non-ascii-idents/mod_file_nonascii_forbidden.stderr
error[E0583]: file not found for module `řųśť`
  --> $DIR/mod_file_nonascii_forbidden.rs:1:1
   |
LL | mod řųśť;
   | ^^^^^^^^^
   |
   = help: to create the module `řųśť`, create file "$DIR/řųśť.rs" or "$DIR/řųśť/mod.rs"
   = note: if there is a `mod řųśť` elsewhere in the crate already, import it with `use crate::...` instead

error[E0754]: trying to load file for module `řųśť` with non-ascii identifier name
  --> $DIR/mod_file_nonascii_forbidden.rs:1:5
   |
LL | mod řųśť;
   |     ^^^^
   |
   = help: consider using the `#[path]` attribute to specify filesystem path

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0583, E0754.
For more information about an error, try `rustc --explain E0583`.
