tests/ui/rfcs/rfc-2457-non-ascii-idents/mod_file_nonascii_forbidden.rs
mod řųśť; //~ ERROR trying to load file for
//~^ ERROR file not found for

fn main() {}
